syntax = "proto3";

option go_package = ".;proto";

message HelloRequest {
  string hello = 1;
}

message HelloResponse {
  string greet = 1;
}

service HelloService {
  rpc Hello(HelloRequest) returns(stream HelloResponse) {};
}