syntax = "proto3";

package service;

option go_package = ".;proto";

message SyncServiceRequest{

}

message SyncServiceInfo{
  // 服务的名称
  string  name = 1;
  // 资源版本号
  string resourceVersion = 2;

  // 操作
  enum Operation {
    // 默认操作
    DEFAULT = 0;
    // 添加操作
    ADD = 1;
    // 删除操作
    DELETE = 2;
    // 更新操作
    UPDATE = 3;
  }
  Operation operation = 3;

  // 创建时间
  string  creationTimeStamp = 4;

  // 更新时间
  string updateTimeStamp = 5;

  // service 拥有的 labels 标签
  map<string, string> labels = 6;

  // service 拥有的 selector 标签
  map<string, string> selector = 7;
}

message SyncServiceResponse{
  // 命名空间
  string namespace = 1;

  // service 的事件数据
  repeated SyncServiceInfo syncServiceInfo = 2;
}

// Service 的 rpc 接口
service ServiceService{
  // service 服务的 list watch 事件数据接口
  rpc SyncServiceWatchListService(stream SyncServiceRequest) returns(stream SyncServiceResponse);
}
